--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,17 @@ html body {
   width:100%;
   height:100%;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.btn {
+  border: 1px solid black;
+  padding: 8px 16px;
+}
+
+.btn:disabled {
+  background: #ccc;
+
+}
