--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,16 @@
   box-shadow: rgb(174, 174, 174) 0px 0px 10px;
 }
 
+
+
+
 html body {
   width:100%;
   height:100%;
+  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.btn {
-  border: 1px solid black;
-  padding: 8px 16px;
-}
-
-.btn:disabled {
-  background: #ccc;
-
-}
